Fixed donate buttons so that brackets don't wrap.

--- a/_sass/components/_call-to-action.scss
+++ b/_sass/components/_call-to-action.scss
@@ -4,18 +4,23 @@
   display: block;
   font-size: 1.35rem;
   font-weight: 300;
-  width: 6.2rem;
+  min-width: 6.2rem;
   padding: 13px 8px;
   letter-spacing: 0.02em;
   text-align: center;
   text-decoration: none;
   text-transform: lowercase;
+  white-space: nowrap;
 
   @include m-secondary-font-family();
 
+  // Necessary to insert invisible brackets so that hovering doesn't
+  // change content box width
+  @include m-surround-with-brackets(hidden);
+
   &:lang(ka) {
     font-size: 1.15rem;
-    padding: 13px 16px;
+    padding: 13px 7px;
   }
 }
 
@@ -42,6 +47,6 @@ $call-to-action-dark-background-color: darken($secondary-color, 3%);
   padding: 11px 0;
 
   &:lang(ka) {
-    padding: 11px 14px;
+    padding: 11px 5px;
   }
 }
